--- a/css/scoreboard.css
+++ b/css/scoreboard.css
@@ -1,35 +1,631 @@
-button.up {
-	background-color: #52d178;
-	border: none; /* Remove borders */
+
+/* Overall Style ======================================= */
+
+body{
+	font-family: 'PT Sans', sans-serif;
+	margin: 0;
+	padding: 0;
+	width: 100vw;
+	min-width: 100vw;
+	max-width: 100vw;
+	overflow: hidden;
+}
+
+h1, h2{
+	font-family: 'PT Serif', serif;
+	color: white;
+}
+
+h3{
+	margin: 5px;
+}
+
+#main{
+	max-width: 850px;
+	margin: auto;
+	margin-top: 120px;
+}
+
+.centered{
+	text-align: center;
+	overflow-wrap: normal;
+}
+
+
+/* ===================================================== */
+
+
+
+/* Header ============================================== */
+
+#header{
+	min-height: 100px;
+	height: 8%;
+	width: 97%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding-left: 3%;
+	overflow: hidden;
+	background-color: darkturquoise;
+}
+
+#header > h1{
+	position: absolute;
+	bottom: 0;
+	line-height: 1em;
+}
+/* ===================================================== */
+
+
+
+/* Buttons ============================================= */
+
+button{
+	border: 2px solid lightcyan;
+	background-color: lightseagreen;
+	border-radius: 4px;
 	color: white; /* White text */
-	width:20%;
+	width:18%;
 	height:15%;
 	font-size: 16px; /* Set a font size */
 	cursor: pointer; /* Mouse pointer on hover */
+	overflow-wrap: break-word;
 }
 
-button.down {
-	background-color: #db5346;
-	border: none; /* Remove borders */
-	color: white; /* White text */
-	width:20%;
-	height:15%;
-	font-size: 16px; /* Set a font size */
-	cursor: pointer; /* Mouse pointer on hover */
+.down{
+	background-color: blue;
 }
 
-button.up:hover {
-	background-color: #3c8050;
+button.up:active { background-color: #224a2e; }
+button.up { background-color: mediumturquoise; }
+button:hover{ background-color: turquoise; }
+/* button.down { background-color: #ffffff; }*/
+
+/* ===================================================== */
+
+
+
+/* Control Panel > Categories ========================== */
+
+.sections3{
+	display: inline-block;
+	position: static;
+	width: 30%;
+	min-height: inherit;
+	max-height: inherit;
+	text-align: center;
+	border: 1px solid pink;
+	padding: 0;
+	vertical-align: bottom;
 }
 
-button.up:active {
-	background-color: #224a2e;
+.category{
+	border-radius: 4px;
+	background-color: turquoise;
+	bottom: 3%;
+
+	text-align: center;
 }
 
-button.down:hover {
-	background-color: #8a332b;
+.category > h2 {
+	line-height: 1em;
+	margin-top: 3%;
 }
 
-div.std {
-	padding:0px;
+.left{
+	left: 3%;
+}
+.center{
+	left: 35%;
+}
+.right{
+	right: 3%;
+}
+
+form{
+	text-align: left;
+}
+
+#hideoverflow { overflow: hidden; }
+#outer { position: relative; left: 50%; float: left; }
+#inner { position: relative; left: -50%; float: left; }
+
+/* ===================================================== */
+
+
+
+/* Scoreboards > Timer ================================= */
+
+.half{
+	width: 48%;
+	height: inherit;
+	border: 0px solid orange;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.half-height{
+	width: 100%;
+	height: 48%;
+	border: 0px solid orange;
+	display: inline-block;
+}
+
+.abcd{
+	overflow: hidden;
+	max-height: 85%;
+	min-height: 85%;
+	border: 0px solid pink;
+	background-color: cyan;
+}
+
+button.fill{
+	height: 35%;
+	width: 100%;
+	vertical-align: bottom;
+}
+
+.big{
+	font-size: 2em;
+	font-weight: bold;
+}
+
+.time{
+	width: 12%;
+	height: 60%;
+	display: inline-block;
+	font-size: 4em;
+	vertical-align: middle;
+	line-height: 1em;
+}
+.timer{
+	display: block;
+}
+
+#btn_clock{
+	height: 40%;
+	width: 100%;
+}
+#btn_clock_div{
+	display: block;
+	vertical-align: bottom;
+	margin-top: -5px;
+}
+
+button.plus, button.minus{
+	line-height: 100%;
+	padding: 0;
+
+	max-height: inherit;
+	min-height: inherit;
+	max-height: 100%;
+	width: 100%;
+	margin: 0;
+}
+
+button.plus::before{
+	padding: 0;
+	content: "+";
+}
+button.minus::before{
+	content: "-";
+}
+
+#top, #middle, #bottom{
+	border: 1px solid lime;
+	min-height: 27%;
+	max-height: 27%;
+	display: block;
+	width: 100%;
+}
+#top{
+	background-color: transparent;
+	padding: 0;
+	margin: 0;
+	border: 2px solid red;
+	/*margin-top: 5%;*/
+}
+
+#middle{
+	background-color: orange;
+}
+
+.width7{
+	width: 12%;
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 4em;
+	line-height: 1em;
+	height: auto;
+	padding: 0;
+	margin: 0;
+	border: 0px solid black;
+}
+
+
+
+.outline{
+	border: 0px solid magenta;
+}
+.outline1{
+	border: 0px solid pink;
+	vertical-align: top;
+	height: 65%;
+	margin: 0;
+}
+.base{
+	padding: 0;
+	margin: 0;
+}
+
+
+
+tr{
+	border: 1px solid lime;
+}
+
+td{
+	border: 1px solid orange;
+}
+
+.title{
+	border: 1px solid blue;
+	max-height: 15%;
+	min-height: 15%;
+}
+.title h3{
+	font-size: 100%;
+	line-height: 100%;
+	padding: 0;
+	margin: 0;
+	font-weight: bold;
+	background-color: pink;
+}
+
+/* ===================================================== */
+
+.clock-btn-div{
+	min-height: 25%; 
+	max-height: 25%;
+	width: 100%;
+}
+.clock-num-div{
+	min-height: 50%;
+	max-height: 25%;
+	width: 100%;
+}
+
+.clock-btn{
+	max-height: inherit;
+	min-height: inherit;
+	height: inherit;
+	display: inline-block;
+	padding: 0;
+	width: 12%;
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#top1{
+	max-height: 27%;
+	min-height: 27%;
+	width: 100%;
+	background-color: purple;
+	margin-top: 8%;
+}
+
+/* ================================================================================= */
+
+.inherit_w{
+	width: inherit;
+	min-width: inherit;
+	max-width: inherit;
+}
+
+.inherit_h{
+	height: inherit;
+	min-height: inherit;
+	max-height: inherit;
+}
+
+.fullscreen{
+	width: 100vw;
+	min-width: 100vw;
+	max-width: 100vw;
+	height: 100vh;
+	min-height: 100vh;
+	max-height: 100vh;
+}
+
+#header_1{
+	height: 7vh;
+	min-height: 7vh;
+	max-width: 7vh;
+	background-color: darkturquoise; 
+	padding-left: 2vw;
+}
+
+#top_1{
+	height: 33vh;
+	min-height: 33vh;
+	max-height: 33vh;
+	margin-top: 2vh;
+}
+#mid_1{
+	height: 27vh;
+	min-height: 27vh;
+	max-height: 27vh;
+	margin-top: 2vh;
+}
+#bot_1{
+	height: 25vh;
+	min-height: 25vh;
+	max-height: 25vh;
+	margin-top: 2vh;
+}
+
+.stats_1{
+	width: 29vw;
+	min-width: 29vw;
+	max-width: 29vw;
+	margin-left: 1.9vw; /* RESET THIS BACK TO 2VW +++++++++++++++++++++++++++++++++++++ */
+	margin-right: 2vw;
+	border: 0px solid lime;
+}
+
+.stats_title_1{
+	height: 5vh;
+	min-height: 5vh;
+	max-height: 5vh;
+}
+
+.stats_title_text_1{
+	line-height: 5vh;
+	font-size: 4vh;
+	text-align: center;
+	font-weight: bold;
+}
+
+.stats_score_1{
+	height: 11vh;
+	min-height: 11vh;
+	max-height: 11vh;
+}
+
+.stats_section_1{
+	width: 14vw;
+	min-width: 14vw;
+	max-width: 14vw;
+}
+
+.stats_score_num{
+	height: 7vh;
+	min-height: 7vh;
+	max-height: 7vh;
+	line-height: 7vh;
+	font-size: 5vh;
+	text-align: center;
+	margin: 0;
+}
+
+.stats_score_text{
+	height: 4vh;
+	min-height: 4vh;
+	max-height: 4vh;
+	line-height: 4vh;
+	font-size: 3vh;
+	text-align: center;
+	margin: 0;
+}
+
+.stats_button_1{
+	height: 17vh;
+	min-height: 17vh;
+	max-height: 17vh;
+}
+
+.stats_button_section{
+	width: 14vw;
+	min-width: 14vw;
+	max-width: 14vw;
+}
+
+.stats_button_section_v{
+	height: 8vh;
+	min-height: 8vh;
+	max-width: 8vh;
+}
+
+.row{
+	margin: 0;
+}
+
+.col{
+	padding: 0;
+}
+
+.container{
+	padding: 0;
+	margin: 0;
+}
+
+
+
+.timer_1{
+	width: 34vw;
+	min-width: 34vw;
+	max-width: 34vw;
+	border: 0px solid lime;
+}
+
+.timer_clock{
+	height: 18vh;
+	min-height: 18vh;
+	max-height: 18vh;
+}
+
+.timer_clock_btn{
+	height: 13vh;
+	min-height: 13vh;
+	max-height: 13vh;
+}
+
+.timer_btn_row{
+	height: 5vh;
+	min-height: 5vh;
+	max-height: 5vh;
+}
+
+.timer_num_row{
+	height: 8vh;
+	min-height: 8vh;
+	max-height: 8vh;
+}
+
+.timer_div_7{
+	width: 4vw;
+	min-width: 4vw;
+	max-width: 4vw;
+}
+
+.margin_top_2{
+	margin-top: 2vh;
+}
+.margin_top_1{
+	margin-top: 1vh;
+}
+.margin_right_1{
+	margin-right: 1vw;
+}
+.margin_sides_2{
+	margin-left: 2vw;
+	margin-right: 2vw;
+}
+.margin_sides_1{
+	margin-left: 1vw;
+	margin-right: 1vw;
+}
+
+
+.timer_num{
+	line-height: 8vh;
+	font-size: 6vh;
+	text-align: center;
+}
+
+.penalty_section{
+	width: 46vw;
+	min-width: 46vw;
+	max-width: 46vw;
+}
+
+.penalty_add_bar{
+	height: 6vh;
+	min-height: 6vh;
+	max-height: 6vh;
+	line-height: 6vh;
+	font-size: 3vh;
+	text-align: center;
+	background-color: lightseagreen;
+	color: white;
+}
+
+.penalty_add_bar input{
+	background-color: transparent;
+	border: 0;
+	text-align: center;
+}
+
+.penalty_add_bar select{
+	background-color: transparent;
+	border: 0;
+	text-align: left;
+	padding-left: 0.5vw;
+	font-size: 2vh;
+}
+
+.penalty_add_bar button{
+	border: 0;
+	border-radius: 0;
+}
+
+.penalty_list{
+	height: 20vh;
+	min-height: 20vh;
+	max-height: 20vh;
+	background-color: lightcyan;
+}
+
+.penalty_list_item{
+	height: 4vh;
+	min-height: 4vh;
+	max-height: 4vh;
+	text-align: center;
+	line-height: 4vh;
+}
+
+.penalty_col{
+	width: 14vw;
+	min-width: 14vw;
+	max-width: 14vw;
+	padding-left: 1vw;
+	padding-right: 1vw;
+}
+
+.penalty_col_1{
+	width: 9vw;
+	min-width: 9vw;
+	max-width: 9vw;
+}
+.penalty_col_2{
+	width: 3vw;
+	min-width: 3vw;
+	max-width: 3vw;
+}
+.penalty_col_3{
+	width: 6vw;
+	min-width: 6vw;
+	max-width: 6vw;
+}
+
+.penalty_btn{
+	width: 4vw;
+	min-width: 4vw;
+	max-width: 4vw;
+}
+
+.penalty_btn button
+	border: 0;
+	border-radius: 0;
+}
+
+.end_btn_sides{
+	width: 13vw;
+	min-width: 13vw;
+	max-width: 13vw;
+}
+
+.end_btn_mid{
+	width: 20vw;
+	min-width: 20vw;
+	max-width: 20vw;
+}
+
+.end_btn_mid_v{
+	height: 12vh;
+	min-height: 12vh;
+	max-height: 12vh;
+}
+
+.btn_plus{
+	background-color: mediumturquoise;
+}
+.btn_minus{
+	background-color: darkturquoise;
+}
+
+#header_1 h1{
+	line-height: 7vh;
+	font-size: 5.5vh;
 }
