Started reworking control panel page

--- a/public/css/scoreboard.css
+++ b/public/css/scoreboard.css
@@ -4,10 +4,15 @@
 body{
 	font-family: 'PT Sans', sans-serif;
 	border: 0;
+	margin: 0;
 	padding: 0;
 	width: 100vw;
 	min-width: 100vw;
 	max-width: 100vw;
+
+	/*hide anything that would make the page scroll*/
+	overflow-x: hidden;
+	/*overflow-y: hidden;*/ 
 }
 
 h1, h2{
@@ -25,10 +30,10 @@ h3{
 	margin-top: 120px;
 }
 
-.centered{
+/*.centered{
 	text-align: center;
 	overflow-wrap: normal;
-}
+}*/
 
 
 /* ===================================================== */
@@ -72,12 +77,12 @@ button{
 	overflow-wrap: break-word;
 }
 
-.down{
+/*.down{
 	background-color: blue;
-}
-
+}*/
+/*
 button.up:active { background-color: #224a2e; }
-button.up { background-color: mediumturquoise; }
+button.up { background-color: mediumturquoise; }*/
 button:hover{ background-color: turquoise; }
 /* button.down { background-color: #ffffff; }*/
 
@@ -130,6 +135,60 @@ form{
 #outer { position: relative; left: 50%; float: left; }
 #inner { position: relative; left: -50%; float: left; }
 
+
+.game_select{
+	border: 1px solid green;
+	height: 15vh;
+	min-height: 15vh;
+	max-height: 15vh;
+	padding-top: 5vh;
+}
+
+.control_panel_center{
+	margin: auto;
+	width: 80vw;
+	max-width: 800px;
+	min-width: 80vw;
+}
+
+.control_panel_buttons{
+	height: 45vh;
+	min-height: 45vh;
+	max-height: 45vh;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+.control_panel_buttons button{
+	width: 15.75vw;
+	min-width: 15.75vw;
+	max-width: 15.75vw;
+	height: 18vh;
+}
+
+.control_panel_options{
+	height: 33vh;
+	min-height: 33vh;
+	max-height: 33vh;
+	border: 1px solid red;
+}
+
+.option_section_header h2{
+	margin: 0;
+}
+
+.control_panel_options_section{
+	background-color: turquoise;
+	width: 20vw;
+	min-width: 20vw;
+	max-width: 20vw;
+	border: 1px solid pink;
+}
+
+.testpls{
+	width: 800px;
+	border: 1px solid purple;
+}
 /* ===================================================== */
 
 
