--- a/public/css/scoreboard.css
+++ b/public/css/scoreboard.css
@@ -24,42 +24,12 @@ h3{
 	margin: 5px;
 }
 
-/*#main{
-	max-width: 850px;
-	margin: auto;
-	margin-top: 120px;
-}*/
-
-/*.centered{
-	text-align: center;
-	overflow-wrap: normal;
-}*/
-
 
 /* ===================================================== */
 
 
 
 /* Header ============================================== */
-/*
-#header{
-	min-height: 100px;
-	height: 8%;
-	width: 97%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding-left: 3%;
-	overflow: hidden;
-	background-color: darkturquoise;
-}
-
-#header > h1{
-	position: absolute;
-	bottom: 0;
-	line-height: 1em;
-}*/
-
 
 #header{
 	height: 7vh;
@@ -92,55 +62,15 @@ button{
 	overflow-wrap: break-word;
 }
 
-/*.down{
-	background-color: blue;
-}*/
-/*
-button.up:active { background-color: #224a2e; }
-button.up { background-color: mediumturquoise; }*/
 button:hover{ background-color: turquoise; }
-/* button.down { background-color: #ffffff; }*/
 
 /* ===================================================== */
 
 
 
-/* Control Panel > Categories ========================== */
+/* Control Panel ========================== */
 
-/*.sections3{
-	display: inline-block;
-	position: static;
-	width: 30%;
-	min-height: inherit;
-	max-height: inherit;
-	text-align: center;
-	border: 1px solid pink;
-	padding: 0;
-	vertical-align: bottom;
-}
 
-.category{
-	border-radius: 4px;
-	background-color: turquoise;
-	bottom: 3%;
-
-	text-align: center;
-}
-
-.category > h2 {
-	line-height: 1em;
-	margin-top: 3%;
-}*/
-
-/*.left{
-	left: 3%;
-}
-.center{
-	left: 35%;
-}
-.right{
-	right: 3%;
-}*/
 
 form{
 	text-align: left;
@@ -230,195 +160,12 @@ form{
 	background-color: gainsboro;
 }
 
-
-/*.testpls{
-	width: 800px;
-	border: 1px solid purple;
-}*/
 /* ===================================================== */
 
 
 
 /* Scoreboards > Timer ================================= */
 
-/*.half{
-	width: 48%;
-	height: inherit;
-	border: 0px solid orange;
-	display: inline-block;
-	vertical-align: top;
-}
-
-.half-height{
-	width: 100%;
-	height: 48%;
-	border: 0px solid orange;
-	display: inline-block;
-}*/
-
-/*.abcd{
-	overflow: hidden;
-	max-height: 85%;
-	min-height: 85%;
-	border: 0px solid pink;
-	background-color: cyan;
-}*/
-
-/*button.fill{
-	height: 35%;
-	width: 100%;
-	vertical-align: bottom;
-}*/
-
-/*.big{
-	font-size: 2em;
-	font-weight: bold;
-}*/
-
-/*.time{
-	width: 12%;
-	height: 60%;
-	display: inline-block;
-	font-size: 4em;
-	vertical-align: middle;
-	line-height: 1em;
-}
-.timer{
-	display: block;
-}*/
-
-/*#btn_clock{
-	height: 40%;
-	width: 100%;
-}
-#btn_clock_div{
-	display: block;
-	vertical-align: bottom;
-	margin-top: -5px;
-}*/
-
-/*button.plus, button.minus{
-	line-height: 100%;
-	padding: 0;
-
-	max-height: inherit;
-	min-height: inherit;
-	max-height: 100%;
-	width: 100%;
-	margin: 0;
-}*/
-
-/*button.plus::before{
-	padding: 0;
-	content: "+";
-}
-button.minus::before{
-	content: "-";
-}*/
-/*
-#top, #middle, #bottom{
-	border: 1px solid lime;
-	min-height: 27%;
-	max-height: 27%;
-	display: block;
-	width: 100%;
-}
-#top{
-	background-color: transparent;
-	padding: 0;
-	margin: 0;
-	border: 2px solid red;
-	/*margin-top: 5%;*/
-/*}
-*/
-/*#middle{
-	background-color: orange;
-}*/
-
-/*.width7{
-	width: 12%;
-	display: inline-block;
-	vertical-align: middle;
-	font-size: 4em;
-	line-height: 1em;
-	height: auto;
-	padding: 0;
-	margin: 0;
-	border: 0px solid black;
-}
-*/
-
-
-/*.outline{
-	border: 0px solid magenta;
-}
-.outline1{
-	border: 0px solid pink;
-	vertical-align: top;
-	height: 65%;
-	margin: 0;
-}
-.base{
-	padding: 0;
-	margin: 0;
-}*/
-
-
-
-/*tr{
-	border: 1px solid lime;
-}
-
-td{
-	border: 1px solid orange;
-}*/
-
-/*.title{
-	border: 1px solid blue;
-	max-height: 15%;
-	min-height: 15%;
-}
-.title h3{
-	font-size: 100%;
-	line-height: 100%;
-	padding: 0;
-	margin: 0;
-	font-weight: bold;
-	background-color: pink;
-}*/
-
-/* ===================================================== */
-
-/*.clock-btn-div{
-	min-height: 25%; 
-	max-height: 25%;
-	width: 100%;
-}
-.clock-num-div{
-	min-height: 50%;
-	max-height: 25%;
-	width: 100%;
-}
-
-.clock-btn{
-	max-height: inherit;
-	min-height: inherit;
-	height: inherit;
-	display: inline-block;
-	padding: 0;
-	width: 12%;
-	display: inline-block;
-	vertical-align: middle;
-}*/
-
-/*#top1{
-	max-height: 27%;
-	min-height: 27%;
-	width: 100%;
-	background-color: purple;
-	margin-top: 8%;
-}
-*/
 /* ================================================================================= */
 
 .inherit_w{
@@ -467,7 +214,7 @@ td{
 	width: 29vw;
 	min-width: 29vw;
 	max-width: 29vw;
-	margin-left: 2vw; /* RESET THIS BACK TO 2VW +++++++++++++++++++++++++++++++++++++ */
+	margin-left: 2vw; 
 	margin-right: 2vw;
 	border: 0px solid lime;
 }
@@ -785,6 +532,7 @@ td{
 	line-height: 7vh;
 	margin-top: 1.5vh;
 	margin-bottom: 1.5vh;
+	padding-left: 1vw;
 }
 
 .menu_bar_section a:hover{
