--- a/public/css/scoreboard.css
+++ b/public/css/scoreboard.css
@@ -10,6 +10,8 @@ body{
 	min-width: 100vw;
 	max-width: 100vw;
 
+	/*background-color: #0B3534;*/
+
 	/*hide anything that would make the page scroll*/
 	overflow-x: hidden;
 	overflow-y: hidden; 
@@ -35,7 +37,7 @@ h3{
 	height: 7vh;
 	min-height: 7vh;
 	max-width: 7vh;
-	background-color: darkturquoise; 
+	background-color: #314455; 
 }
 
 #header h1{
@@ -45,16 +47,26 @@ h3{
 
 
 /* ===================================================== */
+/*
+COLOR CHANGES:
+lightcyan -> #DFE6ED -> background scoreboard stuff
+#9E5A63 314455 
+#9E5A63 -> mediumturquoise (btn_plus), darkturquoise (btn_down), .control_panel_options
+#C96567 -> lightseagreen -> 314455
+light buttons text -> #FFCB9A
+dark buttons text + select -> #D9B08C
+#C96567 -> sidebar body + button hover
 
 
+*/
 
 /* Buttons ============================================= */
 
 button{
-	border: 2px solid lightcyan;
-	background-color: lightseagreen;
+	border: 2px solid #DFE6ED;
+	background-color: #644E5B;
 	border-radius: 4px;
-	color: white; /* White text */
+	color: #D9B08C; /* White text */
 	width:18%;
 	height:15%;
 	font-size: 16px; /* Set a font size */
@@ -62,7 +74,10 @@ button{
 	overflow-wrap: break-word;
 }
 
-button:hover{ background-color: turquoise; }
+button:hover{ 
+	color: #FFCB9A;
+	background-color: #9E5A63; 
+}
 
 /* ===================================================== */
 
@@ -110,6 +125,7 @@ form{
 	height: 18vh;
 }
 
+
 .control_panel_options{
 	height: 32vh;
 	min-height: 32vh;
@@ -120,11 +136,12 @@ form{
 }
 
 .control_panel_options_section{
-	background-color: turquoise;
+	background-color: #9E5A63;
 	width: 20vw;
 	min-width: 20vw;
 	max-width: 20vw;
 	border-radius: 4px;
+	color: white;
 	border: 0;
 }
 
@@ -151,13 +168,15 @@ form{
 }
 
 .submit_btn{
-	background-color: white;
-	border: 1px solid silver;
+	background-color: #9E5A63;
+	border: 1px solid white;
 	border-radius: 4px;
+	color: #D9B08C;
 }
 
 .submit_btn:hover{
-	background-color: gainsboro;
+	background-color: #C96567;
+	color: #FFCB9A;
 }
 
 /* ===================================================== */
@@ -217,7 +236,7 @@ form{
 	max-width: 29vw;
 	margin-left: 2vw; 
 	margin-right: 2vw;
-	background-color: lightcyan;
+	background-color: #DFE6ED;
 	border: 0px solid lime;
 }
 
@@ -300,7 +319,7 @@ form{
 }
 
 #timer_block{
-	/*background-color: lightcyan;*/
+	/*background-color: #DFE6ED;*/
 }
 
 .timer_1{
@@ -382,11 +401,12 @@ form{
 	line-height: 6vh;
 	font-size: 3vh;
 	text-align: center;
-	background-color: lightseagreen;
+	background-color: #314455;
 	color: white;
 }
 
 .penalty_add_bar select{
+	color: #D9B08C;
 	appearance: none;
 	background: transparent;
 	background-color: transparent;
@@ -407,7 +427,7 @@ form{
 	height: 20vh;
 	min-height: 20vh;
 	max-height: 20vh;
-	background-color: lightcyan;
+	background-color: #DFE6ED;
 	overflow-y: auto;
 	overflow-x: hidden;
 }
@@ -441,6 +461,7 @@ form{
 	width: 6vw;
 	min-width: 6vw;
 	max-width: 6vw;
+	margin-right: 1vw;
 }
 .penalty_col_4{
 	width: 6vw;
@@ -491,10 +512,14 @@ form{
 }
 
 .btn_plus{
-	background-color: mediumturquoise;
+	background-color: #9E5A63;
 }
 .btn_minus{
-	background-color: darkturquoise;
+	background-color: #9E5A63;
+}
+
+.btn_plus:hover, .btn_minus:hover{
+	background-color: #C96567;
 }
 
 
@@ -510,7 +535,7 @@ form{
 	width: 20vw;
 	min-width: 20vw;
 	max-width: 20vw;
-	background-color: darkcyan;
+	background-color: #644E5B;
 	color: white;
 	z-index: 1;
 	overflow-y: auto;
@@ -522,7 +547,7 @@ form{
 	min-height: 7vh;
 	max-height: 7vh;
 	line-height: 7vh;
-	background-color: teal;
+	background-color: #9E5A63;
 }
 
 .menu_bar_title_text{
@@ -544,7 +569,7 @@ form{
 }
 
 .menu_bar_title_arrow:hover{
-	color: black;
+	color: #D9B08C;
 }
 
 .menu_bar_section{
@@ -560,7 +585,7 @@ form{
 }
 
 .menu_bar_section h2:hover{
-	color: black;
+	color: #D9B08C;
 }
 
 
@@ -583,6 +608,7 @@ form{
 }
 
 .menu_mode_div select{
+	color: #D9B08C;
 	background: transparent;
 	background-color: transparent;
 	border: 0;
